--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  background-color: cadetblue;
+}
+
+a {
+  color: cadetblue;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
