--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,25 @@
-.Dictionary {
-  background-color: cadetblue;
+.Dictionary h1 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.Dictionary section {
+  background-color: white;
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  padding: 6px 4px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+}
+
+.Dictionary .hint {
+  font-size: 10px;
+  margin-top: 5px;
 }
