--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@ a {
   color: cadetblue;
 }
 
+h1 {
+  color: snow;
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
